# comp-algos

./: LICENSE  main.py  pyproject.toml
cpp/: CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
cpp/src/cpu/: storm_rans.cpp
cpp/tests/: CMakeLists.txt
python/: CLAUDE.md  hello.py  jp.txt  pyproject.toml  run.py  settings.json  test1.txt  test2.txt  test3.txt  us.txt
python/algorithms/: abc.py  ac.py  multi_lane_rans.py  rans.py
python/tests/: test_main.py
