[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fire>=0.7.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250827",
    "tqdm-stubs>=0.2.1",
    "types-requests>=2.32.4.20250913",
]

[[tool.mypy.overrides]]
module = "fire.*"
ignore_missing_imports = true

